Remove selection upon cursor movement keystrokes.

--- a/about.html
+++ b/about.html
@@ -188,7 +188,7 @@
         Copyright 2021 RKDAW Enterprises and Ralph Williamson<br>
         <br>
         Licensed under the Apache License, Version 2.0 (the "License");
-        you may not use this file except in compliance with the License.
+        You may not use this file except in compliance with the License.
         You may obtain a copy of the License at<br>
         <br>
         <a href="https://www.apache.org/licenses/LICENSE-2.0.txt">https://www.apache.org/licenses/LICENSE-2.0.txt</a><br>
